<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash2"
    tools:context=".Register">

    <TextView
        android:id="@+id/tv_welcomeR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        style="@style/Judul_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="303dp"
        android:layout_height="382dp"
        app:cardBackgroundColor="@color/bg_login"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeR">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="236dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            style="@style/TextInputLayout"
            android:hint="@string/email_or_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_username"
            android:layout_width="236dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            style="@style/TextInputLayout"
            android:hint="@string/Username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="236dp"
            android:layout_height="40dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            style="@style/TextInputLayout"
            android:hint="@string/masukkan_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_passKon"
            android:layout_width="236dp"
            android:layout_height="40dp"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            style="@style/TextInputLayout"
            android:hint="@string/passKon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_passKon"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/btn_login"
            android:layout_marginTop="280dp"
            style="@style/ButtonNext"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>