<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDasar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutAtas"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:text="Menu"
                android:textSize="40sp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/id_keranjang"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/ic_keranjang"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="100dp"
        >
        
        <GridLayout
            android:id="@+id/gripTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_marginTop="9dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/minuman"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:id="@+id/mDingin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="11dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/CmDingin"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/coffe_hangat"/>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minuman_dingin"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="15sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mPanas"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:id="@+id/mPanas2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="11dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/CmPanas"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/minuman_dingin"/>

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minuman_panas"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="15sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/makanD"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:id="@+id/MakanDingin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="11dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/CmakanDingin"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/makan"/>

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Makanan_Dingin"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="15sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Makanan"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:id="@+id/LMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="11dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/ImSnack"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/snack"/>

                    <TextView
                        android:id="@+id/CmSnack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="15sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </RelativeLayout>


</FrameLayout>